--- a/documents/TODO
+++ b/documents/TODO
@@ -12,7 +12,7 @@
 ✔ [ ] Definir entidades (Produto, Lote, Consumo, Usuário) @done(26-02-17 17:07)
 ✔ [ ] Modelar banco de dados (DER) @done(26-02-17 17:07)
 ✔ [ ] Definir regras de negócio @done(26-02-17 17:07)
-- [ ] Criar diagramas simples de fluxo @started(26-02-17 17:08)
+✘ [ ] Criar diagramas simples de fluxo @started(26-02-17 17:08) @cancelled(26-02-24 17:19) @wasted(1w11m25s)
 ✔ [ ] Definir estrutura de pastas @done(26-02-17 17:07)
 
 ## Semana 3 — Setup Backend (Django)
@@ -21,11 +21,12 @@
 ✔ [ ] Configurar PostgreSQL @started(26-02-17 17:07) @done(26-02-17 19:02) @lasted(1h55m39s)
 ✔ [ ] Criar models iniciais @started(26-02-17 17:07) @done(26-02-17 19:02) @lasted(1h55m39s)
 ✔ [ ] Rodar migrações @started(26-02-17 17:07) @done(26-02-17 19:02) @lasted(1h55m38s)
-- [ ] Criar superusuário @started(26-02-17 19:03)
+✔ [ ] Criar superusuário @started(26-02-17 19:03) @done(26-02-17 20:40) @lasted(1h37m46s)
 
 ## Semana 4 — API com Django REST Framework
-- [ ] Instalar DRF
-- [ ] Criar serializers
+✔ [ ] Instalar DRF @started(26-02-23 19:57) @done(26-02-23 19:57) @lasted(5s)
+    ✔ [ ] Estudar documentação oficial @started(26-02-23 19:17) @est(2h) @done(26-02-23 19:51) @lasted(34m46s)
+✔ [ ] Criar serializers + testar eles @started(26-02-23 19:58) @done(26-02-25 14:58) @lasted(1d19h39s)
 - [ ] Criar ViewSets
 - [ ] Criar rotas da API
 - [ ] Testar API no Postman/Insomnia
